--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -26,4 +26,4 @@ jobs:
       uses: cypress-io/github-action@v5
       with:
         browser: chrome
-        headless: true
+        headless: false
