--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "devDependencies": {
-    "cypress": "^12.0.0"
+    "cypress": "^12.0.0",
     "cypress-plugin-tab": "^1.0.5"
   }
 }
